inc comments